--- a/index.html
+++ b/index.html
@@ -1,13 +1,60 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/unimall.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Uni-Mall</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/unimall.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="theme-color" content="#ffffff" />
+  <title>Uni-Mall</title>
+
+  <!-- 预加载关键CSS -->
+  <link rel="preload" href="/assets/styles/index.css" as="style" crossorigin="anonymous">
+  <link rel="preload" href="/assets/js/app.js" as="script" crossorigin="anonymous">
+
+  <!-- 关键CSS内联 - 放置核心样式 -->
+  <style>
+    /* 关键样式内联 */
+    body,
+    html {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      -webkit-font-smoothing: antialiased;
+      -webkit-overflow-scrolling: touch;
+      overscroll-behavior: none;
+    }
+
+    * {
+      -webkit-tap-highlight-color: transparent;
+    }
+
+    #app {
+      width: 100%;
+      height: 100%;
+    }
+
+    .initial-loading {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      background: #fff;
+    }
+  </style>
+
+</head>
+
+<body>
+  <div id="app">
+    <!-- 初始加载状态，在 Vue 挂载前显示 -->
+    <div class="initial-loading">
+      <img src="/unimall.png" alt="Loading" width="50" height="50">
+    </div>
+  </div>
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
