--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <title>Uni-Mall</title>
 
   <!-- 预加载关键CSS -->
-  <link rel="preload" href="/assets/styles/index.css" as="style" crossorigin="anonymous">
-  <link rel="preload" href="/assets/js/app.js" as="script" crossorigin="anonymous">
+  <link rel="stylesheet" href="/src/assets/styles/index.css">
 
   <!-- 关键CSS内联 - 放置核心样式 -->
   <style>
